--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "codelabs-next-pwa",
-  "version": "0.0.6",
+  "name": "codelabs-next-web",
+  "version": "0.0.1",
   "description": "This boilerplate is a starter nextjs app to building web platform",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tomibudis/codelabs-next-pwa.git"
+    "url": "git+https://github.com/tomibudis/codelabs-next-web.git"
   },
   "keywords": [
     "boilerplate",
