--- a/package.json
+++ b/package.json
@@ -39,12 +39,10 @@
     "esm": "^3.2.25",
     "lodash": "^4.17.21",
     "next": "12.0.9",
-    "next-pwa": "^5.4.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-query": "^3.34.12",
-    "sass": "^1.49.7",
-    "styled-components": "^5.3.3"
+    "sass": "^1.49.7"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.1.0",
